...
                                    </Link>
                                </Text>

                                <Text style={styles.footer}>
                                    Pas encore de compte ?{" "}
                                    <Link href="/(auth)/signup" style={styles.link}>
                                        Inscris-toi ici
                                    </Link>
                                </Text>
                            </Animated.View>
                        </Animated.View>
                    </ScrollView>
                </SafeAreaView>
...
